--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -87,6 +87,7 @@
 
     .caption span {
       font-weight: bold;
+      white-space: nowrap;
     }
 
     footer {
@@ -174,7 +175,11 @@
     </div>
 
     <div class="caption">
-      Meet someone as <span style="color: var(--red);">wild</span>, <span style="color: var(--green);">adventurous</span>, or <span style="color: var(--blue);">romantic</span> as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+      Meet someone as 
+      <span style="color: var(--red);">wild</span>, 
+      <span style="color: var(--green);">adventurous</span>, or 
+      <span style="color: var(--blue);">romantic</span> as you are. 
+      Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
     </div>
   </div>
 
