--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -9,8 +9,8 @@
     :root {
       --gold: #e1bf78;
       --red: #ff4d4d;
+      --green: #4dff88;
       --blue: #57b9ff;
-      --green: #41e291;
     }
 
     * {
@@ -87,7 +87,6 @@
 
     .caption span {
       font-weight: bold;
-      white-space: nowrap;
     }
 
     footer {
@@ -175,11 +174,11 @@
     </div>
 
     <div class="caption">
-      Meet someone as 
+      Meet someone as<br>
       <span style="color: var(--red);">wild</span>, 
       <span style="color: var(--green);">adventurous</span>, or 
-      <span style="color: var(--blue);">romantic</span> as you are. 
-      Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+      <span style="color: var(--blue);">romantic</span><br>
+      as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
     </div>
   </div>
 
