--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -178,7 +178,7 @@
       <span style="color: var(--red);">wild</span>, 
       <span style="color: var(--green);">adventurous</span>, or 
       <span style="color: var(--blue);">romantic</span><br>
-      as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+      as you. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
     </div>
   </div>
 
