--- a/entrance.html
+++ b/entrance.html
@@ -71,11 +71,11 @@
 
   <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <a href="https://lelibido.com/quiz-new.html" class="gif-button">
+  <a href="https://lelibido.com/where-to-date.html" class="gif-button">
     <img src="golden-ass-uniform.GIF" alt="Tap That Ass to Enter">
   </a>
 
-  <a href="https://lelibido.com/quiz-new.html" class="caption">Tap that ASS to enter</a>
+  <a href="https://lelibido.com/where-to-date.html" class="caption">Tap that ASS to enter</a>
 
 </body>
 </html>
