--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -166,11 +166,11 @@
   <div class="border-wrapper">
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-    <h1>Where do you want to date?</h1>
+    <h1>WYA?</h1>
 
     <div class="buttons">
       <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">In a Le Libido Venue</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/proximity-app.html'">Date on the Go</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/proximity-app.html'">I'm dating on the go</button>
     </div>
 
     <div class="caption">
