--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -170,7 +170,7 @@
 
     <div class="buttons">
       <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">In a Le Libido Venue</button>
-      <button class="button" onclick="window.location.href='https://lelibido.com/proximity-app.html'">I'm dating on the go</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/proximity-app.html'">Dating on the go</button>
     </div>
 
     <div class="caption">
