--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -17,7 +17,9 @@
 
     body {
       font-family: 'Montserrat', sans-serif;
-      background-color: var(--deep-gold);
+      background-color: body {
+  background-color: #7d653f; /* darkened metallic gold */
+};
       color: var(--white);
       margin: 0;
       padding: 0;
