--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -3,156 +3,118 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Le Libido PWA Download</title>
+  <title>Le Libido</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --gold: #e1bf78;
       --charcoal: #111111;
-      --red: #950606;
-      --blue: #064D95;
-      --green: #06954E;
+      --white: #ffffff;
     }
 
     body {
       margin: 0;
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: var(--gold);
-      color: white;
-    }
-
-    .header {
       background-color: var(--charcoal);
-      padding: 40px 0;
-      border-bottom: 6px solid var(--gold);
-      box-shadow: inset 0 -3px 5px rgba(255, 215, 0, 0.4);
+      font-family: 'Montserrat', sans-serif;
+      color: var(--white);
       text-align: center;
     }
 
     .logo {
-      max-width: 160px;
-      filter: drop-shadow(0 0 10px rgba(0,0,0,0.6));
+      max-width: 100px;
+      margin: 40px auto 20px auto;
+      display: block;
     }
 
-    .wrapper {
-      max-width: 700px;
-      margin: 0 auto;
+    .main-box {
+      background-color: var(--gold);
+      color: var(--white);
       padding: 40px 20px;
-      text-align: center;
+      margin: 0 auto;
+      max-width: 500px;
+      border-radius: 20px;
     }
 
-    h1 {
-      font-size: 1.8rem;
-      color: var(--charcoal);
+    .main-box h1 {
+      font-size: 2rem;
+      font-weight: 700;
+      text-shadow: 0 0 8px rgba(255,255,255,0.4);
       margin-bottom: 20px;
     }
 
-    .description {
+    .main-box p {
       font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 30px;
-      color: var(--charcoal);
+      margin: 6px 0;
     }
 
-    .install-button {
-      background-color: var(--charcoal);
-      color: var(--gold);
+    .main-box em {
+      font-style: italic;
+    }
+
+    .question {
+      text-align: left;
+      margin: 20px 0;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+
+    .options {
+      margin-left: 10px;
+      text-align: left;
+    }
+
+    .options label {
+      display: block;
+      margin: 5px 0;
+      font-weight: 400;
+    }
+
+    .pulse-button {
+      margin-top: 30px;
+      padding: 14px 28px;
+      font-size: 1rem;
       font-weight: bold;
       border: none;
-      padding: 14px 24px;
       border-radius: 8px;
-      font-size: 1rem;
+      color: var(--gold);
+      background-color: var(--charcoal);
       cursor: pointer;
-      margin-bottom: 30px;
+      animation: pulse 2.5s infinite;
     }
 
-    .how-it-works {
-      text-align: left;
-      background-color: #fdf7e2;
-      padding: 20px;
-      border-radius: 10px;
-      color: #111;
-      border: 2px solid var(--gold);
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.07); }
+      100% { transform: scale(1); }
     }
 
-    .how-it-works h2 {
-      color: var(--charcoal);
-      margin-bottom: 15px;
-    }
-
-    .how-it-works ol {
-      padding-left: 20px;
-      font-size: 0.95rem;
-      line-height: 1.6;
-    }
-
-    @media (max-width: 600px) {
-      .logo {
-        max-width: 120px;
-      }
-    }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-  </div>
+  <img src="le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <div class="wrapper">
-    <h1>Le Libido</h1>
+  <div class="main-box">
+    <h1>The 1st In-Person Dating App</h1>
+    <p>10 questions</p>
+    <p>100% private</p>
+    <p>1000x more <em>SCAN-DALOUS</em> than swiping</p>
 
-    <div class="description">
-      Le Libido is the dating app that only works when you’re out in the world. You check into a venue like a bar, a café, a restaurant, etc. and the app activates, showing you who else is nearby and open to making a connection right here and right now. There’s no ghosting. No swiping. Just instant IRL connection with real people, in real places, in real time.
+    <div class="question">1. Do you prefer to make the first move or get approached?</div>
+    <div class="options">
+      <label><input type="radio" name="q1"> I want to make the first move</label>
+      <label><input type="radio" name="q1"> I want to get approached</label>
     </div>
 
-    <button class="install-button" onclick="enablePWA()">Enable the Magic</button>
-
-    <div class="how-it-works">
-      <h2>🔥 How It Works</h2>
-      <ol>
-        <li><strong>Take our hilariously sexy 10-question quiz.</strong> Discover who you’re compatible with and why they might just be your perfect match.</li>
-        <li><strong>Choose your mode: Verified or Anonymous.</strong> Then complete your profile. Keep it mysterious, or show off who you are and share exactly what you’re looking for.</li>
-        <li><strong>Scope out the scene.</strong> Peek at who’s hot at each venue before you go, or check into a bar, café, restaurant to get checked in and see who’s checking you out.</li>
-        <li><strong>Make your move.</strong> Tap “Approach” to see who wants to meet you right now, or keep your location private until you “Invite” someone and give them permission to approach you.</li>
-        <li><strong>Slide into real life.</strong> Use our 1-on-1 or group chat feature to set up your date IRL—and skip the small talk.</li>
-      </ol>
+    <div class="question">2. Are you looking for love or a good time?</div>
+    <div class="options">
+      <label><input type="radio" name="q2"> Love</label>
+      <label><input type="radio" name="q2"> A good time</label>
+      <label><input type="radio" name="q2"> Let it evolve</label>
     </div>
+
+    <button class="pulse-button">Start Quiz</button>
   </div>
-
-  <script>
-    let deferredPrompt;
-
-    window.addEventListener('beforeinstallprompt', (e) => {
-      e.preventDefault();
-      deferredPrompt = e;
-    });
-
-    function enablePWA() {
-      // Geolocation
-      if ('geolocation' in navigator) {
-        navigator.geolocation.getCurrentPosition(
-          () => {},
-          () => {},
-          { enableHighAccuracy: true }
-        );
-      }
-
-      // Push Notifications
-      if ('Notification' in window && Notification.permission !== 'granted') {
-        Notification.requestPermission();
-      }
-
-      // PWA Install
-      if (deferredPrompt) {
-        deferredPrompt.prompt();
-        deferredPrompt.userChoice.then(() => {
-          deferredPrompt = null;
-        });
-      }
-    }
-  </script>
 
 </body>
 </html>
