--- a/Pwa-download.html
+++ b/Pwa-download.html
@@ -17,7 +17,7 @@
 
     body {
       font-family: 'Montserrat', sans-serif;
-      background-color: var(--deep-gold);
+      background-color: #E7CD78;
       color: var(--white);
       margin: 0;
       padding: 0;
